[COLAB-2747] Fix button spacing

--- a/view/src/main/resources/static/sass/bootstrap/custom/_button.scss
+++ b/view/src/main/resources/static/sass/bootstrap/custom/_button.scss
@@ -31,6 +31,18 @@
   }
 }
 
+//= Button spacers
+.cb-btn-spacer {
+  .btn:not(.btn-block) + .btn:not(.btn-block) {
+    @extend .ml-2;
+  }
+
+  .btn-block + .btn-block {
+    @extend .mt-2;
+  }
+}
+
+
 //= Elements within btn block
 .cb-btn-image-text {
   vertical-align: middle;
